refactor: GroupService에서 DTO 변환 로직은 모두 GroupMapper 클래스로 이동